--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
                 obj.style.color = "#00ffff";
 
+            } else if(Numero_Atual == 0)   {
+
+                obj.style.color = "black";
+
             } else {
-
                 obj.style.color = "red";
-
             }
 
             //console.log("teste");
